Jakieś drobne zmiany